# naturallanguageprocessingcompetition-nlp-1

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
code/: baseline 코드 설명.txt  baseline_code_summary.md
dialogue-summarization/: EXPERIMENT_LOG.md  PROGRESS_REPORT.md  README.md  inference_demo.ipynb  llm_finetuning_demo.ipynb  train_demo.ipynb
dialogue-summarization/configs/: base_config.yaml  finetune_config.yaml  screening_config.yaml  screening_qwen3.yaml  screening_test.yaml  train_config.yaml
dialogue-summarization/docs/: REFACTORING_PLAN.md
dialogue-summarization/screening_results/: SCREENING_ISSUES_ANALYSIS.md  screening_results_20251002_022050.csv  screening_results_20251002_022644.csv  screening_results_20251002_023237.csv  screening_results_20251002_024138.csv  screening_results_20251002_034050.csv  screening_results_20251002_040246.csv  screening_results_20251002_041635.csv  screening_results_20251002_164126.csv  screening_results_20251003_075909.csv  screening_results_20251003_152821.csv  screening_results_20251003_181738.csv  screening_results_20251003_185151.csv  screening_results_20251003_194002.csv  screening_results_20251003_195512.csv  screening_results_20251003_211416.csv  screening_results_20251004_002519.csv
docs/: ADVANCED_EXPERIMENTS.md
notebooks/: stage1_eda_preprocessing.ipynb  stage2_baseline_training.ipynb  stage3_hyperparameter_optimization.ipynb  stage4_advanced_models.ipynb  stage5_ensemble_submission.ipynb  test_utils.ipynb  utils.py
submission/: output.csv  output_optimized.csv
(+20 files in other folders)
